# eclipse-meta-environment

./: README.md
asf-fragment/: Makefile.am  configure.ac
asfsdf-feature/: .project  feature.xml
asfsdf-fragment/: .gitignore  Makefile.am  asf-fragment.pc.in  asfsdf-fragment.pc.in  configure.ac
asfsdf-meta-eclipse-imp/: .gitignore  .project  ChangeLog  asfsdf-meta-eclipse-imp.pc.in  build.properties  plugin.xml
asfsdf-meta-eclipse-imp/tbscripts/: Makefile.am  asfsdf-meta.props  asfsdf-meta.props.src  main.tb  main.tb.src
asfsdf-meta-eclipse-imp/tbscripts/asf/: Makefile.am  asf-editor-actions.tb  asf-editor-actions.tb.src  asf-editor-utils.tb  asf-editor-utils.tb.src  asf-gui-listeners.tb  asf-initialize.tb  asf-initialize.tb.src  asf-language.tb  asf-language.tb.src  asf-listeners.tb  asf-pretty-print.tb  asf-term-editor-actions.tb  asf-utils.tb  asfsdf-meta.tb  sdf-pretty.tb  sdf-pretty.tb.src  standard.asfsdf.actions.src
asfsdf-meta-eclipse-imp/tbscripts/sdf/: Makefile.am  sdf-editor-actions.tb  sdf-initialize.tb  sdf-initialize.tb.src  sdf-listeners.tb  sdf-listeners.tb.src  sdf-meta.tb  sdf-module-utils.tb  sdf-pretty.tb  sdf-pretty.tb.src  sdf-progress-listener.tb  sdf-progress-listener.tb.src  sdf-transactions.tb  sdf-utils.tb  sdf2-language.tb  sdf2-language.tb.src  standard.sdf.actions.src  start-pt-dump.tb  term-editor-actions.tb  term-language.idef  term-listeners.tb  term-namespace.h  term-parsetable.tb  term-utils.tb
asfsdf-meta-eclipse-imp/utils/: Config2XML.asf  Config2XML.sdf
asfsdf-plugin/: .gitignore  .project  INSTALL  Makefile.am  asfsdf-plugin.pc.in  build.properties  config.status  configure  doc-header.html  meta-build.ant  meta-build.m4  plugin.xml
asfsdf-plugin/autom4te.cache/: output.0  requests  traces.0
aterm-to-pbf/: .gitignore  COPYING  ChangeLog  Makefile.am  aterm-to-pbf.pc.in  configure.ac
aterm-to-pbf/lib/: Makefile.am  a2p-byteencoding.c  a2p-byteencoding.h  a2p-doublekeyedindexedset.c  a2p-doublekeyedindexedset.h  a2p-hashset.c  a2p-hashset.h  a2p-hashtable.c  a2p-hashtable.h  a2p-indexedset.c  a2p-indexedset.h  a2p-stringutils.c  a2p-stringutils.h  a2p-typeutils.c  aterm2pbf.c  aterm2pbf.h  byteencoding.c  doublekeyedindexedset.c  doublekeyedindexedset.h  hashset.c  hashset.h  hashtable.c  hashtable.h  indexedset.c  indexedset.h  pdbtypes.c  pdbtypes.h  stringutils.c  typeutils.c  typeutils.h
aterm-to-pbf/test/: Makefile.am  testtypes.c
meta-eclipse-imp/: .classpath  .gitignore  .project  ChangeLog  build.properties  meta-eclipse-imp.pc.in  plugin.xml
meta-eclipse-imp/schema/: org.meta_environment.eclipse.actions.LanguageEditorMenu.exsd
meta-eclipse-imp/tbscripts/: Makefile.am  attribute-changed-event.tb  build-results.idef  builder.idef  cache-utils.tb  config-utils.tb  dependencies-changed-event.tb  dynamic-language-actions.idef  editor-tool.idef  error-output.tb  error-viewer.idef  facts.idef  gui-actions.tb  gui-utils.tb  io-utils.tb  io.idef  ioj.idef  jobs-manager.idef  language-actions.idef  language-actions.tb  module-manager.idef  module-manager.tb  module-utils.tb  outline-tool.idef  parse-controller.idef  parse-utils.tb  parsetable-utils.tb  paths.idef  pretty-print-utils.tb  progress.idef  resource-changes.idef  resources.idef  selection-listener.tb  selection-tracker.idef  text-utils.tb  visualization-tool.idef
meta-eclipse/branches/ECLIPSE_GUI/: .classpath  .classpath.backup  .project  build.properties  plugin.xml
org.eclipse.imp.pdb.viz.graph/: build.properties  plugin.xml
sdf-eclipse-installer/: .project  build.properties
sdf-eclipse-installer-feature/: .project  feature.xml
sdf-eclipse-installer-linux-x86/: .project  build.properties
sdf-eclipse-installer-linux-x86/install/: README
sdf-eclipse-installer-linux-x86/install/include/: RStore-utils.h  RStore.h  inputStringBuilder.h  logging.h  parserOptions.h  rsrc-usage.h
sdf-eclipse-installer-linux-x86/install/lib/: libASFME.la  libATB.la  libATerm.la  libConfigAPI.la  libErrorAPI.la  libLocationAPI.la  libPT2SDF.la  libPTMEPT.la  libRStoreAPI.la  libSDF2PT.la  libSDFME.la  libasc-support-me.la  liblogging.la  libmept.la  libptable.la  libsglr.la  libstatistics.la  libtide-adapter.la
sdf-eclipse-installer-macosx-x86/: .project  build.properties
sdf-eclipse-installer-macosx-x86/install/include/: ParsedRStore.h  options.h
sdf-eclipse-installer-macosx-x86/install/lib/: libASFME.dylib  libATB.dylib  libATerm.dylib  libConfigAPI.dylib  libErrorAPI.dylib  libLocationAPI.dylib  libPT2SDF.dylib  libPTMEPT.dylib  libRStoreAPI.dylib  libSDF2PT.dylib  libSDFME.dylib  libasc-support-me.dylib  liblogging.dylib  libmept.dylib  libptable.dylib  libsglr.dylib  libstatistics.dylib  libtide-adapter.dylib
sdf-eclipse-installer-win32-x86/: .project  build.properties
sdf-eclipse-installer-win32-x86/install/: README
sdf-eclipse-installer-win32-x86/install/include/: ParsedRStore_dict.h  RStore_dict.h  asc-builtins.h  asc-muasf2pt.h  asc-options.h  asc-traversals.h  filterOptions.h  inputString-data.h  mainOptions.h  ptable-utils.h  sglrInterface.h
sdf-eclipse-installer-win32-x86/install/lib/: libASFME.la  libATB.la  libATerm.la  libConfigAPI.la  libErrorAPI.la  libLocationAPI.la  (+12 more)
sglr-invoker/: .classpath  .gitignore  .project  ChangeLog  Makefile.am  README  buildCompleteLib.sh  configure.ac  reconf  sglr-invoker.pc.in
sglr-invoker/example/: booleanTerm.trm.tbl
sglr-invoker/example/src/sglr/demo/: SGRLInvokerDemo.java
sglr-invoker/lib/: Makefile.am  SGLRInvoker.c  asfix-spec.c  asfix-spec.h  compile.sh  parsetable-spec.c  parsetable-spec.h  parsetree-spec.c  parsetree-spec.h  sglr_SGLRInvoker.h
sglr-invoker/lib/.deps/: SGLRInvoker.Plo
sglr-invoker/lib/.libs/: libSGLRInvoker.lai  libSGLRInvoker.so.0.0.0
sglr-invoker/src/sglr/: IInvoker.java  LegacySGLRInvoker.java  SGLRInvoker.java
toolbus-ide/: .project  plugin.xml
vis-plugin-charts-imp/: .gitignore  AUTHORS  vis-plugin-charts-imp.pc.in
vis-plugin-graph-imp/: .classpath  .gitignore  .project  COPYING  Makefile.am  build.properties  plugin.xml  vis-plugin-graph-imp.pc.in
(+623 files in other folders)
