include $(top_srcdir)/Makefile.java.meta

DISTCLEANFILES = META-INF/MANIFEST.MF \
                .project \
                .classpath \
                build.properties \
                .settings/org.eclipse.jdt.ui.prefs \
                .settings/org.eclipse.jdt.core.prefs \
		${PACKAGE}-uninstalled.pc

ACLOCAL_AMFLAGS = -I .

